Fixed tab content z-index

--- a/sass/elements/_other.scss
+++ b/sass/elements/_other.scss
@@ -562,10 +562,12 @@
       width: 100%;
       height: 100%;
       opacity: 0;
+      z-index: -1;
       @include transition(ease-in-out all 0.2s);
       &.active-tab-content{
         position: relative;
         opacity: 1;
+        z-index: 2;
       }
     }
   }
